--- a/TextFinder.Console/TextFinder.Console.csproj
+++ b/TextFinder.Console/TextFinder.Console.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PdfPig" Version="0.1.10" />
+  </ItemGroup>
+
 </Project>
