--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,12 +20,11 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 8.0.0
+          dotnet-version: 'latest' 
 
       - name: Restore depedencies 
         run: dotnet restore TextFinder.Console/TextFinder.Console.csproj --locked-mode
  
-
       - name: Publish 
         run: |
           dotnet publish TextFinder.Console/TextFinder.Console.csproj -c Release -r ${{ matrix.runtime }} --self-contained true -p:PublishSingleFile=true -o publish/${{ matrix.runtime }}
