--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: latest 
+          dotnet-version: 8 
 
       - name: Restore depedencies 
         run: dotnet restore TextFinder.Console/TextFinder.Console.csproj --locked-mode
