--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
           dotnet publish TextFinder.Console/TextFinder.Console.csproj -c Release -r ${{ matrix.runtime }} --self-contained true -p:PublishSingleFile=true -o publish/${{ matrix.runtime }}
 
       - name: Upload Release Assets
+        if: startsWith(github.ref, 'refs/tags/')  # Only run this step if the push is a tag
         uses: softprops/action-gh-release@v1
         with:
           files: publish/${{ matrix.runtime }}/TextFinder*
